--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
         <title>DaveDev</title>
-        <link rel="icon" type="image/png" href="/imgs/favicon.png">
+        <link rel="icon" type="image/png" href="./imgs/favicon.png">
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="/styles.css">
