--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         </script>-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
         <title>DaveDev</title>
-        <link rel="icon" type="image/png" href="./imgs/favicon.png">
+        <link rel="icon" type="image/png" href="/imgs/favIcon.png">
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="/styles.css">
