--- a/pages/contPals.html
+++ b/pages/contPals.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
         <title>Contador de Palabras - Otros Projectos</title>
-        <link rel="icon" type="image/png" href="/imgs/favicon.png">
+        <link rel="icon" type="image/png" href="/imgs/favIcon.png">
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="/styles/styContPals.css">
