--- a/pages/sP.html
+++ b/pages/sP.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>Otros Proyectos</title>
-        <link rel="icon" type="image/png" href="../../imgs/favIcon.png">
+        <link rel="icon" type="image/png" href="/imgs/favIcon.png">
         <link rel="stylesheet" href="/styles/stySpecialPs.css">
     </head>
     <body>
