--- a/pages/thxPage.html
+++ b/pages/thxPage.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
         <title>Thank You</title>
-        <link rel="icon" type="image/png" href="../imgs/favicon.png">
+        <link rel="icon" type="image/png" href="/imgs/favIcon.png">
 
 
         <!-- Load external CSS styles -->
