Update index.html - Mobile SpecialProjects Link

--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
         <div class="webDisclaimer"> Accede a la versión completa disponible en PC y Tablets </div>
 
 
+        <!-- Mobile SP Link -->
+        <div class="mobileSPLink"><a href="pages/sP.html">Herramientas Especiales</a></div>
+
+
         <!-- Footer -->
         <footer class="footer">
             <div class="footerLogosContainer">
