Update index.html - Mobile SpecialProjects Link (2)

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 
         <!-- Mobile SP Link -->
-        <div class="mobileSPLink"><a href="pages/sP.html">Herramientas Especiales</a></div>
+        <div class="mobileSPLink"><a href="/pages/sP.html">Herramientas Especiales</a></div>
 
 
         <!-- Footer -->
