--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>DaveDev</title>
         <link rel="icon" type="image/png" href="/imgs/DD_FavIcon.png">
-        <link rel="stylesheet" href="/styGLOBAL.css">
+        <link rel="stylesheet" href="/styles/styGLOBAL.css">
         <link rel="stylesheet" href="/styles/styHome.css">
     </head>
     <body>
