--- a/pages/thxPage.html
+++ b/pages/thxPage.html
@@ -1,46 +1,76 @@
 <!doctype html>
-
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
         <title>Thank You</title>
-        <link rel="icon" type="image/png" href="/imgs/favIcon.png">
-
-
-        <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="../styles.css">
-
+        <link rel="icon" type="image/png" href="/imgs/DD_FavIcon.png">
+        <link rel="stylesheet" href="/styles/styGLOBAL.css">
+        <link rel="stylesheet" href="/styles/styThxPage.css">
     </head>
-
     <body>
-        <div class="thx">
-            <div class="thxU"> Gracias, responderé a la brevedad. </div>
+        <header>
+            <nav>
+                <a href="/index.html" target="_self"><img src="/imgs/DD_LogoDark.png" alt="logo" class="DvDvLogo"/></a>
+                <div id="navLinks">
+                    <a href="/index.html" class="navLink">Inicio</a>
+                    <div id="navSeparator"></div>
+                    <a href="/index.html#contactAnchor" class="navLink">Contáctame</a>
+                    <button class="darkmodeBttn darkBtnnLIGHT" onclick="darkMode()">
+                        <img class="DkMdImg" src="/imgs/DarkLight.png" alt="light mode"/>
+                    </button>
+                </div>
+                <div id="mobNav" onclick="mobMenu('open')">
+                    <span>-</span>
+                    <span>-</span>
+                    <span>-</span>
+                </div>
+            </nav>
+        </header>
+        <div id="mobNavCont">
+            <div id="mobNavDisplay">
+                <a onclick="mobMenu('close')">Cerrar</a>
+                <hr>
+                <a href="/index.html">Inicio</a>
+                <hr>
+                <a href="/index.html#contactAnchor">Contáctame</a>
+                <hr>
+                <button class="darkmodeBttn darkBtnnLIGHT" onclick="darkMode()">
+                    <img class="DkMdImg" src="/imgs/DarkLight.png" alt="light mode"/>
+                </button>
+                <span id="mobDkDisclaimer">Dark / Light mode</span>
+            </div>
         </div>
-        <div class="thxBttn"><a href="../index.html"> Click aquí para volver al sitio. </a></div>
+
+
+
+
+
+        <div class="thx">
+            Gracias, responderé a la brevedad.
+            <div class="thxT disclaimer"></div>
+        </div>
+        <a id="thxLink" href="/index.html"> Click aquí para volver al sitio. </a>
+
         
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="footerLogosContainer">
-                <div class="logoFooter"><a href="index.html" target="_self"><img src="/imgs/logo.png" alt="logo" class="logoFooter"/></a></div>
-                
-                <div class="footerSocials">
-                    <div>
-                        <a href="www.linkedin.com/in/david-ledesma-22349015a" target="_blank"><img src="/imgs/linkedin.png" alt="LinkedIn" class="socialsLogos"/></a>
-                        <a href="https://www.instagram.com/dava909/" target="_blank"><img src="/imgs/instagram.png" alt="Instragram" class="socialsLogos"/></a>
+
+
+
+        <footer>
+            <div id="footerContent">
+                <div id="logosCont">
+                    <a href="/index.html" target="_self"><img src="/imgs/DD_LogoDark.png" alt="logo" class="DvDvLogo" id="logoFooter"/></a>
+                    <div id="socialsCont">
+                        <a href="https://www.linkedin.com/in/david-ledesma-22349015a" target="_blank"><img src="/imgs/linkedinWhite.png" alt="LinkedIn" class="socialsLogos" id="LinkedIn"/></a>
+                        <a href="https://www.instagram.com/dava909/" target="_blank"><img src="/imgs/instagramWhite.png" alt="Instragram" class="socialsLogos" id="Instagram"/></a>
                     </div>
                 </div>
+                <div class="footerText">Íconos por <a class="varLink darkLink" href="https://www.flaticon.es" target="_blank" title="iconos">Flaticon</a></div>
             </div>
-
-            <div class="FaviconLogos">Íconos por <a href="https://www.flaticon.es" target="_blank" title="iconos">Flaticon</a></div>
         </footer>
 
 
-        <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
+        <script src="/scripts/scrGlobal_DK,MB.js"></script>
+        <script src="/scripts/scrThxPage.js"></script>
     </body>
-
 </html>
-
-
